--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,7 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@mui/icons-material": "5.15.11",
+    "@mui/material": "^5.15.11",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
@@ -20,6 +26,7 @@
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
     "@types/react-burger-menu": "^2.8.7",
     "@types/react-dom": "^18.2.19",
